Style connemara.html

--- a/connemara.html
+++ b/connemara.html
@@ -19,104 +19,103 @@
         <nav>
             <a href="index.html" class="nav-a">Home</a>
             <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="#" class="nav-a">Glenveah National Park</a>
-            <a href="#" class="nav-a">Connemara National Park</a>
-            <a href="#" class="nav-a">Burren National Park</a>
-            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
+            <a href="connemara.html" class="nav-a">Connemara National Park</a>
+            <a href="burren.html" class="nav-a">Burren National Park</a>
+            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
             <a href="#" class="nav-a">Sign up!</a>
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Killarney National Park</h2>
-            <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h2 class="parks-heading">Connemara National Park</h2>
+            <p>Situated in the West of Ireland in County Galway, Connemara National Park covers some 2,000 hectares of scenic mountains, expanses of bogs, heaths, grasslands and woodlands. Some of the Park’s mountains, namely Benbaun, Bencullagh, Benbrack and Muckanaght, are part of the famous Twelve Bens or Beanna Beola range. Connemara National Park was established and opened to the public in 1980. Much of the present Park lands formed part of the Kylemore Abbey Estate and the Letterfrack Industrial School, the remainder having been owned by private individuals. The southern part of the Park was at one time owned by Richard (Humanity Dick) Martin who helped to form the Society for the Prevention of Cruelty to Animals during the early 19th century. The Park lands are now wholly owned by the State and managed solely for National Park purpose.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2371.0858478011814!2d-9.889730584222164!3d53.53838136801077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485a2588a1ca30a5%3A0xf6d1d848f4aa37c9!2sConnemara%20National%20Park!5e0!3m2!1sen!2sie!4v1667382177485!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Old Kenmare Road</h2>
+            <h2 class="parks-heading">Recommended hike: Tully Mountain Hike</h2>
             <ol>
-                <li>Begin at the upper car park of Torc Mountain</li>
-                <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
-                <li>Take an immediate left after crossing a wooden bridge</li>
-                <li>Follow the path as you exit the woodlands</li>
-                <li>Keep following the path through a boarwalked path for a few kilometres</li>
-                <li>As you reach the Cores Cascade head back into the woodlands</li>
-                <li>Folow the path until you reach the paved road</li>
-                <li>Take a left turn</li>
-                <li>Follow the path until you see a parking lot</li>
-                <li>Your hike has finished!</li>
+                <li>Begin at the Letterfrack parking lot</li>
+                <li>Walk left for 500 m until you get to the top of the hill</li>
+                <li>Turn right off the road until you see a fence with a gate</li>
+                <li>Hike the mountain shoulder until you reach the top</li>
+                <li>Continue west and climb the next three peaks, keeping two lakes on your right hand side</li>
+                <li>Descend the valley on the west side of tully mountain in the direction of the sea cliffs until you meet a large stone wall near the bottom of the mountain</li>
+                <li>Turn left and follow the wall until you meet the end of the road on the south side of the mountain</li>
+                <li>Continue down the south side of the mountain until you meet the road</li>
+                <li>Follow the road east back to the pier</li>
             </ol>
-            <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+            <img class="hike-map" src="assets/images/connemara/tully-mountain-hike.png" alt="Map of Tully Mountain Hike">
         </div>
         
         <div class="hike-link-div">
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        <a href="https://connemaranationalpark.com/walk-tully-mountain-2/" target="_blank" id="hike-link">Hike Details</a>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
-                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
+                <img src="assets/images/connemara/common-snipe.jpg" alt="Common Snipe (Gallinago gallinago)" class="parks-images">
+                <figcaption>Common Snipe (Gallinago gallinago)</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
-                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                <img src="assets/images/connemara/chaffinch.jpg" alt="Chaffinch (Fringilla coelebs)" class="parks-images">
+                <figcaption>Chaffinch (Fringilla coelebs)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
-                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                <img src="assets/images/connemara/eurasian-sparrowhook.jpg" alt="Eurasian sparrowhawk (Accipiter nisus)" class="parks-images">
+                <figcaption>Eurasian sparrowhawk (Accipiter nisus)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
-                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                <img src="assets/images/connemara/red-fox.jpg" alt="Red Fox (Vulpes vulpes)" class="parks-images">
+                <figcaption>Red Fox (Vulpes vulpes)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
-                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                <img src="assets/images/connemara/wild-goat.jpg" alt="Wild Goat (Capra aegagrus)" class="parks-images">
+                <figcaption>Wild Goat (Capra aegagrus)</figcaption>
             </div>
 
             <br>
 
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
-                <figcaption>View from Aghadoe</figcaption>
+                <img src="assets/images/connemara/diamond-hill.jpg" alt="View from Diamond Hill" class="parks-images">
+                <figcaption>View from Diamond Hill</figcaption>
             </div>
             <div class="views-images">            
-                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
-                <figcaption>Ladies' View</figcaption>
+                <img src="assets/images/connemara/maumturk-mountains.jpg" alt="Maumturk Mountains" class="parks-images">
+                <figcaption>Maumturk Mountains</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
-                <figcaption>View from Strickeen Mountain</figcaption>
+                <img src="assets/images/connemara/benchoona-mountain.jpg" alt="Benchoona Mountain" class="parks-images">
+                <figcaption>Benchoona Mountain</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
-                <figcaption>View from Tork Mountain</figcaption>
+                <img src="assets/images/connemara/tully-mountain.webp" alt="Tully Mountain" class="parks-images">
+                <figcaption>Tully Mountain</figcaption>
             </div>
 
             <br>
 
             <div>
-                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
-                <figcaption>Aghadoe Ruins</figcaption>
+                <img src="assets/images/connemara/derryinver-bridge.jpg" alt="Derryinver Bridge" class="parks-images">
+                <figcaption>Derryinver Bridge</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
-                <figcaption>Inisfallen Ruins</figcaption>
+                <img src="assets/images/connemara/inishfobin-island.jpg" alt="Inishfobin Island" class="parks-images">
+                <figcaption>Inishfobin Island</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
-                <figcaption>Muckross Abbey</figcaption>
+                <img src="assets/images/connemara/knockbrack.jpg" alt="Knockbrack Burial Chamber" class="parks-images">
+                <figcaption>Knockbrack Burial Chamber</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
-                <figcaption>Old Weir Bridge</figcaption>
+                <img src="assets/images/connemara/clifden.jpg" alt="Clifden City" class="parks-images">
+                <figcaption>Clifden City</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
-                <figcaption>Ross Castle</figcaption>
+                <img src="assets/images/connemara/standing-stones.webp" alt="Standing Stones" class="parks-images">
+                <figcaption>Standing Stones</figcaption>
             </div>
         </div>
 
