--- a/killarney.html
+++ b/killarney.html
@@ -19,11 +19,11 @@
         <nav>
             <a href="index.html" class="nav-a">Home</a>
             <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="#" class="nav-a">Glenveah National Park</a>
-            <a href="#" class="nav-a">Connemara National Park</a>
-            <a href="#" class="nav-a">Burren National Park</a>
-            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
+            <a href="connemara.html" class="nav-a">Connemara National Park</a>
+            <a href="burren.html" class="nav-a">Burren National Park</a>
+            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
             <a href="#" class="nav-a">Sign up!</a>
         </nav>
 
