Style burren.html

--- a/burren.html
+++ b/burren.html
@@ -19,104 +19,100 @@
         <nav>
             <a href="index.html" class="nav-a">Home</a>
             <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="#" class="nav-a">Glenveah National Park</a>
-            <a href="#" class="nav-a">Connemara National Park</a>
-            <a href="#" class="nav-a">Burren National Park</a>
-            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
+            <a href="connemara.html" class="nav-a">Connemara National Park</a>
+            <a href="burren.html" class="nav-a">Burren National Park</a>
+            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
             <a href="#" class="nav-a">Sign up!</a>
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Killarney National Park</h2>
-            <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h2 class="parks-heading">Burren National Park</h2>
+            <p>The Burren National Park is located in the southeastern corner of the Burren and is approximately 1500 hectares in size. The Park land was bought by the Government for nature conservation and public access. It contains examples of all the major habitats within the Burren: Limestone Pavement, Calcareous Grassland, Hazel scrub, Ash/Hazel Woodland, Turloughs, Lakes, Petrifying Springs, Cliffs and Fen. The word “Burren” comes from an Irish word “Boíreann” meaning a rocky place. This is an extremely appropriate name when you consider the lack of soil cover and the extent of exposed Limestone Pavement. However it has been referred to in the past as “Fertile rock” due to the mixture of nutrient rich herb and floral species. In 1651 a Cromwellian Army Officer named Ludlow remarked, “of this barony it is said that it is a country where there is not water enough to drown a man, wood enough to hang one, nor earth enough to bury them. This last is so scarce that the inhabitants steal it from one another and yet their cattle are very fat. The grass grows in tufts of earth of two or three foot square which lies between the limestone rocks and is very sweet and nourishing. The highest point in the park is Knockanes (207 metres) which continues as a curving terraced ridge to Mullaghmór to the south. East of this ridge is an area of extensive, low lying limestone pavement containing a number of semi-permanent lakes. West of this ridge the pavement sweeps down to partially drift-covered ground which gradually rises again to reach the foot of a rocky escarpment. To the south of the park the limestone bedrock disappears under a layer of glacial till. This till area is far more intensively managed for pasture and silage.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2401.308817163479!2d-9.039549284240193!3d52.99683140853402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b751955555555%3A0x36ab0a8cb452f2a8!2sBurren%20National%20Park!5e0!3m2!1sen!2sie!4v1667385249412!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
         <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Old Kenmare Road</h2>
+            <h2 class="parks-heading">Recommended hike: Carron Loop Walk</h2>
             <ol>
-                <li>Begin at the upper car park of Torc Mountain</li>
-                <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
-                <li>Take an immediate left after crossing a wooden bridge</li>
-                <li>Follow the path as you exit the woodlands</li>
-                <li>Keep following the path through a boarwalked path for a few kilometres</li>
-                <li>As you reach the Cores Cascade head back into the woodlands</li>
-                <li>Folow the path until you reach the paved road</li>
-                <li>Take a left turn</li>
-                <li>Follow the path until you see a parking lot</li>
-                <li>Your hike has finished!</li>
+                <li><strong>Start:</strong> Cassidys Pub</li>
+                <li><strong>End:</strong> Cassidys Pub</li>
+                <li><strong>Difficulty level:</strong> Strenous</li>
+                <li><strong>Length:</strong> 9km (4 hours)</li>
+                <li><strong>Ascent:</strong> 100m</li>
+                <li><strong>Rating:</strong> 9.5/10</li>
             </ol>
-            <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+            <img class="hike-map" src="assets/images/burren/carran-loop-map.png" alt="Map of Tully Mountain Hike">
         </div>
         
         <div class="hike-link-div">
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        <a href="https://www.theirishroadtrip.com/burren-walks-guide/" target="_blank" id="hike-link">Hike Details</a>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
-            <div>
-                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
-                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
-            </div>
             <div>            
-                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
-                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                <img src="assets/images/burren/brown-hairstreak.JPG" alt="Brown Hairstreak (Thecla betulae)" class="parks-images">
+                <figcaption>Brown Hairstreak (Thecla betulae)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
-                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                <img src="assets/images/burren/pine-marten.jpg" alt="Pine Marten (martes martes)" class="parks-images">
+                <figcaption>Pine Marten (martes martes)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
-                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                <img src="assets/images/burren/common-sandpiper.jpg" alt="Common Sandpiper (Actitus hypoleucos)" class="parks-images">
+                <figcaption>Common Sandpiper (Actitus hypoleucos)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
-                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                <img src="assets/images/burren/badger.jpg" alt="Badger (Meles meles)" class="parks-images">
+                <figcaption>Badger (Meles meles)</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/burren/stoat.jpg" alt="Irish Stoat (Mustela erminea hibernica)" class="parks-images">
+                <figcaption>Irish Stoat (Mustela erminea hibernica)</figcaption>
             </div>
 
             <br>
 
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
-                <figcaption>View from Aghadoe</figcaption>
+                <img src="assets/images/burren/moher-cliffs.jpg" alt="Cliffs of Moher" class="parks-images">
+                <figcaption>Cliffs of Moher</figcaption>
             </div>
             <div class="views-images">            
-                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
-                <figcaption>Ladies' View</figcaption>
+                <img src="assets/images/burren/ailiwee-caves.webp" alt="Ailwee Caves" class="parks-images">
+                <figcaption>Ailwee Caves</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
-                <figcaption>View from Strickeen Mountain</figcaption>
+                <img src="assets/images/burren/doolin-cave.jpg" alt="Doolin Caves" class="parks-images">
+                <figcaption>Doolin Caves</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
-                <figcaption>View from Tork Mountain</figcaption>
+                <img src="assets/images/burren/aran-islands.jpg" alt="Aran Islands" class="parks-images">
+                <figcaption>Aran Islands</figcaption>
             </div>
 
             <br>
 
             <div>
-                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
-                <figcaption>Aghadoe Ruins</figcaption>
+                <img src="assets/images/burren/poulnabrone-dolmen.webp" alt="Poulnabrone Dolmen" class="parks-images">
+                <figcaption>Poulnabrone Dolmen</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
-                <figcaption>Inisfallen Ruins</figcaption>
+                <img src="assets/images/burren/caherconnell-stone-fort.png" alt="Caherconnell Stone Fort" class="parks-images">
+                <figcaption>Caherconnell Stone Fort</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
-                <figcaption>Muckross Abbey</figcaption>
+                <img src="assets/images/burren/doonagore-castle.jpg" alt="Doonagore Castle" class="parks-images">
+                <figcaption>Doonagore Castle</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
-                <figcaption>Old Weir Bridge</figcaption>
+                <img src="assets/images/burren/poulawack-cairn.jpg" alt="Poulawack Cairn" class="parks-images">
+                <figcaption>Poulawack Cairn</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
-                <figcaption>Ross Castle</figcaption>
+                <img src="assets/images/burren/ucht-mama-ruins.jpg" alt="Ucht Mama Ruins" class="parks-images">
+                <figcaption>Ucht Mama Ruins</figcaption>
             </div>
         </div>
 
