--- a/wicklow.html
+++ b/wicklow.html
@@ -19,104 +19,99 @@
         <nav>
             <a href="index.html" class="nav-a">Home</a>
             <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="#" class="nav-a">Glenveah National Park</a>
-            <a href="#" class="nav-a">Connemara National Park</a>
-            <a href="#" class="nav-a">Burren National Park</a>
-            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
+            <a href="connemara.html" class="nav-a">Connemara National Park</a>
+            <a href="burren.html" class="nav-a">Burren National Park</a>
+            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
             <a href="#" class="nav-a">Sign up!</a>
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Killarney National Park</h2>
-            <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+            <h2 class="parks-heading">Wicklow Mountains National Park</h2>
+            <p>Wicklow Mountains National Park is situated just south of Dublin. Covering 20,483 hectares, Wicklow Mountains National Park has the distinction of being the largest of Ireland’s six National Parks. It is also the only one located in the east of the country. The National Park extends over much of the Wicklow mountains. Upland blanket bog and heath cover the upland slopes and rounded peaks. The wide open vistas are interrupted only by forestry plantations and narrow winding mountain roads. Fast-flowing streams descend into the deep lakes of the wooded valleys and continue their course into the surrounding lowlands. The primary purpose of Wicklow Mountains National Park is the conservation of biodiversity and landscape. The Park is also an invaluable recreational space for locals and visitors alike. Over one million visits are estimated to be made each year. The most visited area is the scenic Glendalough Valley where the ancient monastic settlement of St. Kevin is located. Escape from the summer crowds is possible for those coming properly equipped to explore the uplands on foot, where a sense of wilderness and isolation can readily be found.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.1711488889973!2d-6.313110184381097!3d53.14302289762259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486797cc185c87f3%3A0x681362f40c30d135!2sWicklow%20Mountains%20National%20Park!5e0!3m2!1sen!2sie!4v1667431810516!5m2!1sen!2sie" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
 
         <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Old Kenmare Road</h2>
+            <h2 class="parks-heading">Recommended hike: Miners’ Road Walk</h2>
             <ol>
-                <li>Begin at the upper car park of Torc Mountain</li>
-                <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
-                <li>Take an immediate left after crossing a wooden bridge</li>
-                <li>Follow the path as you exit the woodlands</li>
-                <li>Keep following the path through a boarwalked path for a few kilometres</li>
-                <li>As you reach the Cores Cascade head back into the woodlands</li>
-                <li>Folow the path until you reach the paved road</li>
-                <li>Take a left turn</li>
-                <li>Follow the path until you see a parking lot</li>
-                <li>Your hike has finished!</li>
+                <li><strong>Start:</strong> Upper Lake car park</li>
+                <li><strong>End:</strong> Miner's Village</li>
+                <li><strong>Difficulty level:</strong> Easy</li>
+                <li><strong>Length:</strong> 5km (1:10 hours)</li>
+                <li><strong>Ascent:</strong> 20m</li>
+                <li><strong>Rating:</strong> 9.5/10</li>
             </ol>
-            <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+            <img class="hike-map" src="assets/images/wicklow/miners-road-hike.png" alt="Map of Miner's Road Hike">
         </div>
         
         <div class="hike-link-div">
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        <a href="https://visitwicklow.ie/listing/glendalough-miners-road-walk-purple-route/" target="_blank" id="hike-link">Hike Details</a>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
-                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
+                <img src="assets/images/wicklow/natterjack-toad.jpg" alt="Natterjack Toad (Epidalea calamita)" class="parks-images">
+                <figcaption>Natterjack Toad (Epidalea calamita)</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
-                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                <img src="assets/images/wicklow/water-rail.jpg" alt="Water Rail (Rallus aquaticus)" class="parks-images">
+                <figcaption>Water Rail (Rallus aquaticus)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
-                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                <img src="assets/images/wicklow/daubentons-bat.jpg" alt="Daubenton's Bat (Myotis daubenonii)" class="parks-images">
+                <figcaption>Daubenton's Bat (Myotis daubenonii)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
-                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                <img src="assets/images/wicklow/hedgehog.webp" alt="Hedgehog (Erinaceus europaeus)" class="parks-images">
+                <figcaption>Hedgehog (Erinaceus europaeus)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
-                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                <img src="assets/images/wicklow/fallow-deer.jpg" alt="Fallow Deer (Dama dama)" class="parks-images">
+                <figcaption>Fallow Deer (Dama dama)</figcaption>
             </div>
 
             <br>
 
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
-                <figcaption>View from Aghadoe</figcaption>
+                <img src="assets/images/wicklow/silver-strand.jpg" alt="Silver Strand Beach" class="parks-images">
+                <figcaption>Silver Strand Beach</figcaption>
             </div>
             <div class="views-images">            
-                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
-                <figcaption>Ladies' View</figcaption>
+                <img src="assets/images/wicklow/sally-gap.jpg" alt="Sally Gap" class="parks-images">
+                <figcaption>Sally Gap</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
-                <figcaption>View from Strickeen Mountain</figcaption>
+                <img src="assets/images/wicklow/glendalough-upper-lake.jpg" alt="Glendalough Upper Lake" class="parks-images">
+                <figcaption>Glendalough Upper Lake</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
-                <figcaption>View from Tork Mountain</figcaption>
+                <img src="assets/images/wicklow/powerscourt-waterfall.jpg" alt="Powerscourt Waterfall" class="parks-images">
+                <figcaption>Powerscourt Waterfall</figcaption>
             </div>
 
             <br>
 
             <div>
-                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
-                <figcaption>Aghadoe Ruins</figcaption>
+                <img src="assets/images/wicklow/aghowle-church.jpg" alt="Aghowle Church" class="parks-images">
+                <figcaption>Aghowle Church</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
-                <figcaption>Inisfallen Ruins</figcaption>
+                <img src="assets/images/wicklow/gates-of-heaven.webp" alt="Gates of Heaven" class="parks-images">
+                <figcaption>Gates of Heaven</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
-                <figcaption>Muckross Abbey</figcaption>
+                <img src="assets/images/wicklow/st-crispins-cell.jpg" alt="St. Crispin's Cell" class="parks-images">
+                <figcaption>St. Crispin's Cell</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
-                <figcaption>Old Weir Bridge</figcaption>
+                <img src="assets/images/wicklow/bray-head-cross.jpg" alt="Bray Head Cross" class="parks-images">
+                <figcaption>Bray Head Cross</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
-                <figcaption>Ross Castle</figcaption>
+                <img src="assets/images/wicklow/medieval-graveslab-hollywood.jpg" alt="Medieval Graveslabs at Hollywood" class="parks-images">
+                <figcaption>Medieval Graveslabs at Hollywood</figcaption>
             </div>
         </div>
 
