Style ballycroy.html

--- a/ballycroy.html
+++ b/ballycroy.html
@@ -19,104 +19,98 @@
         <nav>
             <a href="index.html" class="nav-a">Home</a>
             <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="#" class="nav-a">Glenveah National Park</a>
-            <a href="#" class="nav-a">Connemara National Park</a>
-            <a href="#" class="nav-a">Burren National Park</a>
-            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
+            <a href="connemara.html" class="nav-a">Connemara National Park</a>
+            <a href="burren.html" class="nav-a">Burren National Park</a>
+            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
             <a href="#" class="nav-a">Sign up!</a>
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Killarney National Park</h2>
-            <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
+            <h2 class="parks-heading">Ballycroy National Park</h2>
+            <p>Ballycroy National Park (or Wild Nephin National Park) is Ireland’s sixth National Park and located on the Western seaboard in northwest Mayo. It comprises of 15,000 hectares of Atlantic blanket bog and mountainous terrain, covering a vast uninhabited and unspoilt wilderness dominated by the Nephin Beg mountain range. To the west of the mountains is the Owenduff bog. This is one of the last intact active blanket bog systems in Ireland and Western Europe and is an important scientific and scenic feature of the National Park. Wild Nephin National Park is part of the Natura 2000 Network, which protects rare and important habitats and species under the EU Habitats and Birds Directive. To the east of the mountains is the Nephin Forest, which is currently mainly comprised of Sitka spruce and lodgepole pine, and was originally planted for commercial purposes. This area is now within the National Park and will be managed for biodiversity and recreation.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2343.778077126569!2d-9.825516484348645!3d54.024461631401934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4859731760fb30ed%3A0xa19189cc64843b8f!2sBallycroy%20Visitor%20Centre%20-%20Wild%20Nephin%20National%20Park!5e0!3m2!1sen!2sie!4v1667434343004!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
         <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Old Kenmare Road</h2>
+            <h2 class="parks-heading">Recommended hike: Bangor Trail</h2>
             <ol>
-                <li>Begin at the upper car park of Torc Mountain</li>
-                <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
-                <li>Take an immediate left after crossing a wooden bridge</li>
-                <li>Follow the path as you exit the woodlands</li>
-                <li>Keep following the path through a boarwalked path for a few kilometres</li>
-                <li>As you reach the Cores Cascade head back into the woodlands</li>
-                <li>Folow the path until you reach the paved road</li>
-                <li>Take a left turn</li>
-                <li>Follow the path until you see a parking lot</li>
-                <li>Your hike has finished!</li>
+                <li><strong>Start:</strong> Bangor Erris</li>
+                <li><strong>End:</strong> Letterkeen Loop Trail Head</li>
+                <li><strong>Difficulty level:</strong> Difficult</li>
+                <li><strong>Length:</strong> 29.9km (7:04 hours)</li>
+                <li><strong>Ascent:</strong> 773m</li>
+                <li><strong>Rating:</strong> 8.1/10</li>
             </ol>
-            <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
         </div>
         
         <div class="hike-link-div">
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        <a href="https://visitwicklow.ie/listing/glendalough-miners-road-walk-purple-route/" target="_blank" id="hike-link">Hike Details</a>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
-                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
+                <img src="assets/images/ballycroy/golden-plover.jpg" alt="Golden Plover (Pluvialis apricaria)" class="parks-images">
+                <figcaption>Golden Plover (Pluvialis apricaria)</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
-                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                <img src="assets/images/ballycroy/greenland-goose.jpg" alt="Greenland White-fronted Goose (Anser albifrons flavirostris)" class="parks-images">
+                <figcaption>Greenland White-fronted Goose (Anser albifrons flavirostris)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
-                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                <img src="assets/images/ballycroy/irish-hare.jpg" alt="Irish Hare (Lepidus timidus hibernicus)" class="parks-images">
+                <figcaption>Irish Hare (Lepidus timidus hibernicus)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
-                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                <img src="assets/images/ballycroy/rook.jpg" alt="Rook (Corvus frugilegus)" class="parks-images">
+                <figcaption>Rook (Corvus frugilegus)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
-                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                <img src="assets/images/ballycroy/grey-heron.jpg" alt="Grey Heron (Ardea cinerea)" class="parks-images">
+                <figcaption>Grey Heron (Ardea cinerea)</figcaption>
             </div>
 
             <br>
 
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
-                <figcaption>View from Aghadoe</figcaption>
+                <img src="assets/images/ballycroy/keem-beach.jpg" alt="Keem Beach" class="parks-images">
+                <figcaption>Keem Beach</figcaption>
             </div>
             <div class="views-images">            
-                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
-                <figcaption>Ladies' View</figcaption>
+                <img src="assets/images/ballycroy/nephin-beg.png" alt="Nephin Beg Mountain" class="parks-images">
+                <figcaption>Nephin Beg Mountain</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
-                <figcaption>View from Strickeen Mountain</figcaption>
+                <img src="assets/images/ballycroy/correen-more.jpg" alt="View from Correen More" class="parks-images">
+                <figcaption>View from Correen More</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
-                <figcaption>View from Tork Mountain</figcaption>
+                <img src="assets/images/ballycroy/altaconey-river.jpg" alt="Altaconey River" class="parks-images">
+                <figcaption>Altaconey River</figcaption>
             </div>
 
             <br>
 
             <div>
-                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
-                <figcaption>Aghadoe Ruins</figcaption>
+                <img src="assets/images/ballycroy/scardaun-ruins.webp" alt="Scardaun Ruins" class="parks-images">
+                <figcaption>Scardaun Ruins</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
-                <figcaption>Inisfallen Ruins</figcaption>
+                <img src="assets/images/ballycroy/rockfleet-castle.jpg" alt="Rockfleet Castle" class="parks-images">
+                <figcaption>Rockfleet Castle</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
-                <figcaption>Muckross Abbey</figcaption>
+                <img src="assets/images/ballycroy/burrishoole-abbey.jpg" alt="Burrishoole Abbey" class="parks-images">
+                <figcaption>Burrishoole Abbey</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
-                <figcaption>Old Weir Bridge</figcaption>
+                <img src="assets/images/ballycroy/mulranny-causeway.jpg" alt="Mulranny Causeway" class="parks-images">
+                <figcaption>Mulranny Causeway</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
-                <figcaption>Ross Castle</figcaption>
+                <img src="assets/images/ballycroy/slieve-carr.jpg" alt="Slieve Carr" class="parks-images">
+                <figcaption>Slieve Carr</figcaption>
             </div>
         </div>
 
